k8s/deployment-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reservation-app
  namespace: reservation-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reservation-app
  template:
    metadata:
      labels:
        app: reservation-app
    spec:
      containers:
        - name: reservation
          image: default-route-openshift-image-registry.apps-crc.testing/reservation-app/reservation-app
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
