k8s/service-app.yml
apiVersion: v1
kind: Service
metadata:
  name: reservation-app
spec:
  selector:
    app: reservation-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
