k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reservation-ingress
  namespace: reservation-app
spec:
  rules:
    - host: reservation-app.apps-crc.testing
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: reservation-service
                port:
                  number: 3000
