k8s/route-reservation-app.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: reservation-app
spec:
  to:
    kind: Service
    name: reservation-service
  port:
    targetPort: 80
